# commit-pal

./: Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
cmpal/: llm.py  main.py
cmpal/inference/: llm.py  prompts.py
cmpal/models/: config.py
cmpal/scripts/: onboard.py
cmpal/utils/: format.py  git.py
